# sd-catalog-backend

./: .dockerignore  .flaskenv  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
catalog/: .travis.yml  __init__.py  errors.py  sda_db.py  sda_view.py  sql_db.py  user_view.py
catalog/static/: apispec.json
catalog/templates/: base.html  error.html  index.html
catalog/templates/user/: add.html  index.html  list.html
example/: README.md  catalog_common.ipynb
example/ONRL_demo/: oak_ridge.ipynb  onrl_setup.ipynb
example/ONRL_demo/onrl/: temp.pt
example/SLAC_demo/: slac.ipynb  slac_setup.ipynb
example/SLAC_demo/slac/: temp.pt
instance/: config.py
